[gd_scene load_steps=7 format=3 uid="uid://dl2w1j8f1ts13"]

[ext_resource type="Script" path="res://Personnages/Marchand/Marchand.gd" id="1_ytjvu"]
[ext_resource type="Script" path="res://Personnages/Marchand/CorpsMarchand.gd" id="2_hv0ey"]
[ext_resource type="SpriteFrames" uid="uid://tly173ys8sg" path="res://Personnages/Marchand/marchandAnimation.tres" id="3_vftd7"]
[ext_resource type="LabelSettings" uid="uid://dnouf360rvrr0" path="res://InterfaceUtilisateur/Labels Settings/LabelSetting_CharacterLabel.tres" id="4_t821n"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_py43v"]

[sub_resource type="CircleShape2D" id="CircleShape2D_q14sd"]
radius = 100.0

[node name="Marchand" type="Area2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_ytjvu")

[node name="CorpsNPC" type="CharacterBody2D" parent="."]
collision_layer = 4
collision_mask = 17
script = ExtResource("2_hv0ey")

[node name="TimerAnimation" type="Timer" parent="CorpsNPC"]

[node name="AnimationNPC" type="AnimatedSprite2D" parent="CorpsNPC"]
scale = Vector2(1.2, 1.35)
sprite_frames = ExtResource("3_vftd7")
animation = &"idle"
autoplay = "idle"
flip_h = true

[node name="Hitbox" type="CollisionShape2D" parent="CorpsNPC"]
position = Vector2(0, 5.5)
shape = SubResource("CapsuleShape2D_py43v")

[node name="TimerCorrectionAnimation" type="Timer" parent="CorpsNPC"]

[node name="Zone_Detection_Joueur" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_q14sd")

[node name="Nom" type="Label" parent="."]
offset_left = -20.0
offset_top = -46.0
offset_right = -19.0
offset_bottom = -23.0
label_settings = ExtResource("4_t821n")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimerDetection" type="Timer" parent="."]
wait_time = 0.2

[connection signal="timeout" from="CorpsNPC/TimerAnimation" to="CorpsNPC" method="_on_timer_animation_timeout"]
[connection signal="timeout" from="CorpsNPC/TimerCorrectionAnimation" to="CorpsNPC" method="_on_timer_correction_animation_timeout"]
